# icp1_m2to4_bis

./: .gitignore  CMakeLists.txt  README.md
src/: assignment.c
tests/: tests.cpp
